--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+<h1>hi this is vagina people website</h1>
+<p>real true sex guaranteed!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+</body>
+</html>
