--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>hi this is vagina people website</h1>
-<p><h2></h2>real true sex guaranteed!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!<h2></h2></p>
+<p><h2>real true sex guaranteed!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</h2></p>
 </body>
 </html>
