--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>hi this is vagina people website</h1>
 <p><h2>real true sex guaranteed!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</h2></p>
-<p> <img src='https://i.postimg.cc/SQLxBZtt/Untitled10-20241118224848.png' border='0' alt='Untitled10-20241118224848'/></a> </p>
+<p> <a href='https://postimg.cc/V56wMFwj' target='_blank'><img src='https://i.postimg.cc/V56wMFwj/Untitled10-20241118224848.png' border='0' alt='Untitled10-20241118224848'/></a> </p>
 </body>
 </html>
